--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Other files
 dataport-light-2016.csv
+dataport-metadata-dictionary.pdf
+dataport-metadata.csv
+
 
 # Compiled source #
 ###################
