--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 dataport-light-2016.csv
 dataport-metadata-dictionary.pdf
 dataport-metadata.csv
-
+dataport-light-2016-2.csv
 
 # Compiled source #
 ###################
