--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ dataport-light-2016.csv
 dataport-metadata-dictionary.pdf
 dataport-metadata.csv
 dataport-light-2016-2.csv
+*.csv
 
 # Compiled source #
 ###################
